book/tests/snapshots/snapshot__@language-features__case-0.prql.snap
---
source: book/tests/snapshot.rs
<<<<<<< HEAD
expression: "# Can't yet format & compile\n\nfrom employees\nderive distance = case [\n  city == \"Calgary\" -> 0,\n  city == \"Edmonton\" -> 300,\n]\n"
input_file: book/tests/prql/language-features/case-0.prql
---
SELECT
  *,
  CASE
    WHEN city = 'Calgary' THEN 0
    WHEN city = 'Edmonton' THEN 300
    ELSE NULL
  END AS distance
FROM
  employees
=======
expression: "# Can't yet format & compile\n\nfrom employees\nderive distance = case [\n  city == \"Calgary\" => 0,\n  city == \"Edmonton\" => 300,\n]\n"
input_file: book/tests/prql/language-features/case-0.prql
---
Error:
   ╭─[:4:17]
   │
 4 │ derive distance = case [
   ·                 ┬
   ·                 ╰── unexpected =
───╯
>>>>>>> 987d059 (.)

